--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,8 +68,8 @@ add_definitions(
 # CMake configuration
 #
 
-set(PROJECT_CMAKE_CLEAN cmake/clean)
-set(PROJECT_CMAKE_MODULES cmake/modules)
+set(PROJECT_CMAKE_DIR cmake)
+set(PROJECT_CMAKE_MODULES_DIR ${PROJECT_CMAKE_DIR}/modules)
 set(PROJECT_INSTALL_DIR install)
 set(PROJECT_BUILD_DIR build)
 set(PROJECT_DEPS_DIR deps)
@@ -89,7 +89,7 @@ set(PROJECT_SHARE_OUTPUT_DIRECTORY share)
 set(
     CMAKE_MODULE_PATH
     ${CMAKE_MODULE_PATH}
-    ${CMAKE_SOURCE_DIR}/${PROJECT_CMAKE_MODULES}
+    ${CMAKE_SOURCE_DIR}/${PROJECT_CMAKE_MODULES_DIR}
 )
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_RUNTIME_OUTPUT_DIRECTORY})
